--- a/apps/craft-of-ui/src/styles/globals.css
+++ b/apps/craft-of-ui/src/styles/globals.css
@@ -63,6 +63,10 @@
 		--chart-5: 27 87% 67%;
 		color-scheme: light;
 
+		--md-editor-background: hsl(var(--background));
+		--md-editor-foreground: hsl(var(--foreground));
+		--md-editor-border: hsl(var(--border));
+
 		/* codehike theme */
 		--ch-0: light;
 		--ch-1: #6e7781;
