--- a/apps/code-with-antonio/src/styles/globals.css
+++ b/apps/code-with-antonio/src/styles/globals.css
@@ -77,7 +77,7 @@
 		100vh - var(--nav-height) - var(--command-bar-height) - 30px
 	);
 
-	--radius: 0.65rem;
+	--radius: 0.75rem;
 	--background: oklch(1 0 0);
 	--foreground: oklch(0.141 0.005 285.823);
 	--card: oklch(1 0 0);
@@ -153,7 +153,7 @@
 	--card-foreground: oklch(0.985 0 0);
 	--popover: oklch(0.21 0.006 285.885);
 	--popover-foreground: oklch(0.985 0 0);
-	--primary: oklch(0.546 0.245 262.881);
+	--primary: oklch(0.746 0.245 262.881);
 	--primary-foreground: oklch(1 0 0);
 	--secondary: oklch(0.28 0.006 285.885);
 	--secondary-foreground: oklch(0.985 0 0);
@@ -295,13 +295,23 @@
 
 @layer base {
 	[data-sr-button='default'] {
-		@apply bg-linear-180 from-primary relative cursor-pointer to-[color-mix(in_hsl,_var(--primary)_20%,_var(--foreground)_20%)];
+		@apply relative cursor-pointer dark:ring-2 dark:ring-black;
+		background-color: oklch(0.546 0.245 262.881) !important;
+		/* background-image: linear-gradient(
+			180deg,
+			color-mix(in hsl, var(--primary) 70%, white 30%) 0%,
+			var(--primary) 2%,
+			var(--primary) 95%,
+			color-mix(in hsl, var(--primary) 50%, var(--foreground) 50%) 95%,
+			color-mix(in hsl, var(--primary) 25%, var(--foreground) 75%) 100%
+		); */
 
 		/* soft inner shadow small */
 		box-shadow:
-			inset 0 2px 1px 1px rgba(255, 255, 255, 0.2),
-			inset 0 -1px 1px 1px rgba(0, 0, 0, 0.2) !important;
+			inset 0 1px 0px 0px rgba(255, 255, 255, 0.2),
+			inset 0 -2px 0px 1px rgba(0, 0, 0, 0.2) !important;
 	}
+
 	[data-sr-button='secondary'] {
 		@apply ring-foreground/10 ring-1; /* soft inner small */
 		box-shadow:
