--- a/apps/dev-build/src/styles/globals.css
+++ b/apps/dev-build/src/styles/globals.css
@@ -84,8 +84,8 @@
 	--card-foreground: oklch(0.141 0.005 285.823);
 	--popover: oklch(1 0 0);
 	--popover-foreground: oklch(0.141 0.005 285.823);
-	--primary: oklch(0.5192 0.2681 267.38);
-	--primary-foreground: oklch(1 0 0);
+	--primary: oklch(0.8983 0.1856 100.36);
+	--primary-foreground: oklch(0 0 0);
 	--secondary: oklch(0.967 0.001 286.375);
 	--secondary-foreground: oklch(0.21 0.006 285.885);
 	--muted: oklch(0.967 0.001 286.375);
@@ -95,7 +95,7 @@
 	--destructive: oklch(0.577 0.245 27.325);
 	--border: oklch(0.92 0.004 286.32);
 	--input: oklch(0.96 0.004 286.32);
-	--ring: oklch(0.623 0.214 259.815);
+	--ring: oklch(0.8983 0.1856 100.36);
 	--chart-1: oklch(0.646 0.222 41.116);
 	--chart-2: oklch(0.6 0.118 184.704);
 	--chart-3: oklch(0.398 0.07 227.392);
@@ -153,9 +153,9 @@
 	--card-foreground: oklch(0.985 0 0);
 	--popover: oklch(0.21 0.006 285.885);
 	--popover-foreground: oklch(0.985 0 0);
-	--primary: oklch(0.746 0.245 262.881);
-	--primary-dark: oklch(0.5192 0.2681 267.38);
-	--primary-foreground: oklch(1 0 0);
+	--primary: oklch(0.8983 0.1856 100.36);
+	--primary-dark: oklch(0.8983 0.1856 100.36);
+	--primary-foreground: oklch(0 0 0);
 	--secondary: oklch(0.28 0.006 285.885);
 	--secondary-foreground: oklch(0.985 0 0);
 	--muted: oklch(0.19 0.006 286.033);
@@ -165,7 +165,7 @@
 	--destructive: oklch(0.704 0.191 22.216);
 	--border: oklch(1 0 0 / 10%);
 	--input: oklch(1 0 0 / 15%);
-	--ring: oklch(0.488 0.243 264.376);
+	--ring: oklch(0.8983 0.1856 100.36);
 	--chart-1: oklch(0.488 0.243 264.376);
 	--chart-2: oklch(0.696 0.17 162.48);
 	--chart-3: oklch(0.769 0.188 70.08);
@@ -296,29 +296,8 @@
 }
 
 @layer base {
-	[data-sr-button='default'] {
-		@apply relative cursor-pointer dark:ring-2 dark:ring-black;
-		background-color: oklch(0.546 0.245 262.881) !important;
-		/* background-image: linear-gradient(
-			180deg,
-			color-mix(in hsl, var(--primary) 70%, white 30%) 0%,
-			var(--primary) 2%,
-			var(--primary) 95%,
-			color-mix(in hsl, var(--primary) 50%, var(--foreground) 50%) 95%,
-			color-mix(in hsl, var(--primary) 25%, var(--foreground) 75%) 100%
-		); */
-
-		/* soft inner shadow small */
-		box-shadow:
-			inset 0 1px 0px 0px rgba(255, 255, 255, 0.2),
-			inset 0 -2px 0px 1px rgba(0, 0, 0, 0.2) !important;
-	}
-
-	[data-sr-button='secondary'] {
-		@apply ring-foreground/10 ring-1; /* soft inner small */
-		box-shadow:
-			inset 0 2px 1px 1px rgba(255, 255, 255, 0.1),
-			inset 0 -1px 1px 1px rgba(0, 0, 0, 0.5) shadow ring-1 !important;
+	[data-sr-button] {
+		@apply hover:cursor-pointer;
 	}
 
 	* {
