--- a/apps/dev-build/src/styles/tip-newsletter-cta.css
+++ b/apps/dev-build/src/styles/tip-newsletter-cta.css
@@ -18,6 +18,6 @@
 		@apply opacity-50;
 	}
 	[data-sr-button] {
-		@apply bg-primary text-primary-foreground h-14 w-full rounded-none px-8 font-medium md:!h-20 md:w-auto md:text-lg lg:px-10;
+		@apply bg-primary text-primary-foreground h-14 w-full rounded-xl px-8 font-medium md:!h-20 md:w-auto md:text-lg lg:px-10;
 	}
 }
