style(dev): enhance layout and styling across various components
- Updated layout for the post and list pages to improve responsiveness and visual consistency.
- Refactored the ModuleResourceList and PostPlayer components for better integration and user experience.
- Adjusted styling for buttons and navigation elements to align with design standards.
- Improved conditional rendering and accessibility features in the Browse and Search components.

--- a/apps/dev-build/src/styles/globals.css
+++ b/apps/dev-build/src/styles/globals.css
@@ -86,7 +86,7 @@
 	--popover-foreground: oklch(0.141 0.005 285.823);
 	--primary: oklch(0.8666 0.1344 93.33);
 	/* --primary: oklch(0.8983 0.1856 100.36); */
-	--primary-dark: #4a88a9;
+	--primary-dark: #474cd5;
 	--primary-foreground: oklch(0 0 0);
 	--secondary: oklch(0.967 0.001 286.375);
 	--secondary-foreground: oklch(0.21 0.006 285.885);
