--- a/apps/just-react/src/styles/globals.css
+++ b/apps/just-react/src/styles/globals.css
@@ -24,7 +24,7 @@
 @utility container {
 	margin-inline: auto;
 	padding-inline: 1.5rem;
-	max-width: var(--breakpoint-md);
+	max-width: var(--breakpoint-2xl);
 	@media (min-width: 640px) {
 		padding-inline: 1.5rem;
 	}
@@ -78,25 +78,25 @@
 	);
 
 	--radius: 0.75rem;
-	--background: oklch(98.29% 0.0124 91.52);
-	--foreground: oklch(0.29% 0.0124 91.52);
+	--background: oklch(0.9632 0.0121 96.42);
+	--foreground: oklch(0.3212 0.2095 264.2);
 	--card: oklch(1 0.0124 91.52);
 	--card-foreground: oklch(0.141 0.005 285.823);
-	--popover: oklch(1 0 0);
-	--popover-foreground: oklch(0.141 0.005 285.823);
-	--primary: oklch(0.141 0.005 285.823);
+	--popover: oklch(0.3212 0.2095 264.2);
+	--popover-foreground: oklch(1 0 0);
+	--primary: oklch(0.3212 0.2095 264.2);
 	--primary-dark: #474cd5;
 	--primary-foreground: oklch(1 0 0);
 	--secondary: oklch(0.967 0.001 286.375);
 	--secondary-foreground: oklch(0.21 0.006 285.885);
-	--muted: oklch(94.29% 0.0124 91.52);
-	--muted-foreground: oklch(40.29% 0.0124 91.52);
+	--muted: oklch(0.92 0.0121 96.42);
+	--muted-foreground: oklch(0.5 0.12 264.2);
 	--accent: oklch(0.967 0.001 286.375);
 	--accent-foreground: oklch(0.21 0.006 285.885);
 	--destructive: oklch(0.577 0.245 27.325);
 	--border: oklch(90.29% 0.0124 91.52);
-	--input: oklch(0.96 0.004 286.32);
-	--ring: oklch(0.852 0.016 285.938);
+	--input: oklch(0.92 0.0121 96.42);
+	--ring: oklch(0.92 0.0121 96.42);
 	--chart-1: oklch(0.646 0.222 41.116);
 	--chart-2: oklch(0.6 0.118 184.704);
 	--chart-3: oklch(0.398 0.07 227.392);
@@ -219,10 +219,10 @@
 		var(--font-inter), ui-sans-serif, system-ui, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	--font-heading:
-		var(--font-tasa-orbiter), ui-sans-serif, system-ui, sans-serif,
+		var(--font-im-fell-double-pica), ui-sans-serif, system-ui, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	--font-serif:
-		var(--font-source-serif), ui-serif, serif, 'Apple Color Emoji',
+		var(--font-im-fell-dw-pica), ui-serif, serif, 'Apple Color Emoji',
 		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	--font-mono:
 		ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
@@ -309,6 +309,66 @@
 	--radius-md: calc(var(--radius) - 2px);
 	--radius-lg: var(--radius);
 	--radius-xl: calc(var(--radius) + 4px);
+}
+
+@utility prose-themed {
+	--tw-prose-body: var(--color-foreground);
+	--tw-prose-headings: var(--color-foreground);
+	--tw-prose-lead: var(--color-foreground);
+	--tw-prose-links: var(--color-primary);
+	--tw-prose-bold: var(--color-foreground);
+	--tw-prose-counters: var(--color-foreground);
+	--tw-prose-bullets: var(--color-foreground);
+	--tw-prose-hr: var(--color-border);
+	--tw-prose-quotes: var(--color-foreground);
+	--tw-prose-quote-borders: var(--color-border);
+	--tw-prose-captions: var(--color-foreground);
+	--tw-prose-code: var(--color-foreground);
+	--tw-prose-pre-code: var(--color-foreground);
+	--tw-prose-pre-bg: var(--color-muted);
+	--tw-prose-th-borders: var(--color-border);
+	--tw-prose-td-borders: var(--color-border);
+	--tw-prose-invert-body: var(--color-foreground);
+	--tw-prose-invert-headings: var(--color-foreground);
+	--tw-prose-invert-lead: var(--color-foreground);
+	--tw-prose-invert-links: var(--color-primary);
+	--tw-prose-invert-bold: var(--color-foreground);
+	--tw-prose-invert-counters: var(--color-foreground);
+	--tw-prose-invert-bullets: var(--color-muted-foreground);
+	--tw-prose-invert-hr: var(--color-border);
+	--tw-prose-invert-quotes: var(--color-muted-foreground);
+	--tw-prose-invert-quote-borders: var(--color-border);
+	--tw-prose-invert-captions: var(--color-foreground);
+	--tw-prose-invert-code: var(--color-foreground);
+	--tw-prose-invert-pre-code: var(--color-foreground);
+	--tw-prose-invert-pre-bg: var(--color-muted);
+	--tw-prose-invert-th-borders: var(--color-foreground);
+	--tw-prose-invert-td-borders: var(--color-border);
+	blockquote {
+		border-left-color: color-mix(
+			in srgb,
+			var(--color-primary) 100%,
+			transparent
+		);
+		border-left-width: 2px;
+	}
+	@apply font-serif;
+	h1,
+	h2,
+	h3 {
+		@apply font-heading;
+	}
+	code::before,
+	code::after {
+		content: '';
+	}
+	code {
+		@apply bg-foreground text-background rounded-xs px-1 font-bold;
+	}
+}
+
+@utility min-h-fullscreen {
+	min-height: calc(100dvh - var(--nav-height));
 }
 
 @utility prose {
@@ -440,10 +500,6 @@
 
 	.prose li {
 		list-style-type: square;
-	}
-
-	.prose {
-		@apply font-serif;
 	}
 
 	.cm-gutterElement {
