--- a/apps/just-react/src/styles/globals.css
+++ b/apps/just-react/src/styles/globals.css
@@ -22,12 +22,12 @@
 @utility container {
 	margin-inline: auto;
 	padding-inline: 1.5rem;
-	max-width: var(--breakpoint-2xl);
+	max-width: var(--breakpoint-lg);
 	@media (min-width: 640px) {
-		padding-inline: 1.5rem;
+		padding-inline: 2rem;
 	}
 	@media (min-width: 1024px) {
-		padding-inline: 2rem;
+		padding-inline: 4rem;
 	}
 }
 
@@ -77,7 +77,7 @@
 
 	--radius: 0.6rem;
 	--background: oklch(0.9632 0.0121 96.42);
-	--foreground: oklch(0.3112 0.2095 264.2);
+	--foreground: oklch(0.2686 0 0);
 	--card: oklch(1 0.0124 91.52);
 	--card-foreground: oklch(0.141 0.005 285.823);
 	--popover: oklch(1 0 0);
@@ -88,7 +88,7 @@
 	--secondary: oklch(1 0.0124 91.52);
 	--secondary-foreground: oklch(0.21 0.006 285.885);
 	--muted: oklch(0.93 0.0141 96.42);
-	--muted-foreground: oklch(0.6 0.08 264.2);
+	--muted-foreground: oklch(0.3786 0 0);
 	--accent: oklch(0.93 0.0141 96.42);
 	--accent-foreground: oklch(0.3212 0.2095 264.2);
 	--destructive: oklch(0.577 0.245 27.325);
@@ -217,7 +217,7 @@
 		var(--font-inter), ui-sans-serif, system-ui, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	--font-heading:
-		var(--font-libre-caslon-text), ui-sans-serif, system-ui, sans-serif,
+		var(--font-tasa-orbiter), ui-sans-serif, system-ui, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	--font-serif:
 		var(--font-libre-caslon-text), ui-serif, serif, 'Apple Color Emoji',
@@ -350,11 +350,11 @@
 		);
 		border-left-width: 2px;
 	}
-	@apply font-serif;
+
 	h1,
 	h2,
 	h3 {
-		@apply font-heading;
+		@apply font-heading tracking-tight;
 	}
 	code::before,
 	code::after {
@@ -426,6 +426,13 @@
 	* {
 		/* outline: 1px solid red; */
 	}
+	.marketing-page {
+		--foreground: oklch(0.3112 0.2095 264.2);
+		--muted-foreground: oklch(0.6 0.08 264.2);
+		--color-foreground: var(--foreground);
+		--color-muted-foreground: var(--muted-foreground);
+	}
+
 	.dark {
 		[data-theme='invert'] {
 			@apply bg-background text-foreground;
